fix(main-slider): fix content aligning

--- a/app/blocks/main-slider/main-slider.styl
+++ b/app/blocks/main-slider/main-slider.styl
@@ -10,13 +10,14 @@
 		height: 100%
 
 	&__item
-		display: flex
+		//display: flex
 		size: 100%
 		background-size: cover
 		background-repeat: no-repeat
 
 	&__slide-content
-		margin: auto
+		height: 100%
+		text-align: left
 
 	&__text
 		font-family: $GothamProLight
